--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
+    "embed:products": "node scripts/embed_products.mjs",
     "lint": "next lint"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.49.4",
+    "dotenv": "^16.6.0",
     "next": "15.2.5",
+    "openai": "^5.7.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
