--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-google-maps/api": "^2.20.7",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/auth-helpers-react": "^0.5.0",
+    "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
     "dotenv": "^16.6.0",
     "next": "15.2.5",
