--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@supabase/auth-helpers-react": "^0.5.0",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.6.0",
     "next": "15.2.5",
     "openai": "^5.7.0",
